* Task 1137.1119 * Optimized search widget overflow bug

--- a/assets/css/filterwidgets.css
+++ b/assets/css/filterwidgets.css
@@ -16,10 +16,6 @@
 }
 
 #widget-area {
-	
-	height:auto !important;
-	height:1px;
-	position:relative;
 }
 
 #widget-area .filterWidget .widgetheader {
